--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,14 @@
         <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
         <arguments />
         <gpg.keyname>67893CC4</gpg.keyname>
+        
+            <!-- Jacoco Properties -->
+    <jacoco.version>0.7.4.201502262128</jacoco.version>
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+    <sonar.jacoco.itReportPath>${project.basedir}/target/jacoco-it.exec</sonar.jacoco.itReportPath>
+    <sonar.language>java</sonar.language>  
+    
     </properties>
 
     <dependencies>
@@ -128,6 +136,56 @@
             </resource>
         </resources>
         <plugins>
+            
+                    <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${jacoco.version}</version>
+            <executions>
+                <execution>
+                    <id>prepare-unit-test-agent</id>
+                    <configuration>
+                    </configuration>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>jacoco-site</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>prepare-it-test-agent</id>
+                    <configuration>
+                        <propertyName>jacoco.agent.argLine</propertyName>
+                        <destFile>${sonar.jacoco.itReportPath}</destFile>
+                        <append>true</append>
+                    </configuration>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.12.4</version>
+            <configuration>
+                <argLine>${jacoco.agent.argLine}</argLine>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>integration-test</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        
             <!--
             Both "org.apache" and "org.codehaus" are default providers of MOJO plugins
             which are especially dedicated to Maven projects.
