--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,21 @@
             </resource>
         </resources>
         <plugins>
-            
+            	<plugin>
+	    <groupId>org.pitest</groupId>
+	    <artifactId>pitest-maven</artifactId>
+	    <version>1.1.9</version>
+	    <configuration>
+	        <targetClasses>
+	            <param>org.junit.*</param>
+	        </targetClasses>
+		<failWhenNoMutations>false</failWhenNoMutations>
+	            <outputFormats>
+	                <outputFormat>XML</outputFormat>
+	                <outputFormat>HTML</outputFormat>                      
+	            </outputFormats>   
+	    </configuration>
+	</plugin>
                     <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
